--- a/Register.html
+++ b/Register.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="widt=device-width, initial-scale=1.0">
-    <title> Login</title>
-    <link rel="stylesheet" href="stylelogin.css">
+    <title> Sign Up</title>
+    <link rel="stylesheet" href="styleregister.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <head>
 
@@ -15,11 +15,21 @@
 
     <div class="wrapper">
         <form action="">
-            <h1>Login</h1>
+            <h1>Sign Up</h1>
 
             <div class="input-box">
                 <input type="text" placeholder="Username" required>
                 <i class='bx bxs-user'></i>
+            </div>
+
+            <div class="input-box">
+                <input type="email" placeholder="E-mail" required>
+                <i class='bx bx-envelope'></i>
+            </div>
+
+            <div class="input-box">
+                <input type="tel" placeholder="Telephone" required>
+                <i class='bx bxs-phone' ></i>
             </div>
             
             <div class="input-box">
@@ -27,11 +37,12 @@
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
-            <button type="submit" class="btn">Login</button>
-
-            <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+            <div class="input-box">
+                <input type="password" placeholder="Repeat your password" required>
+                <i class='bx bxs-lock-alt'></i>
             </div>
+
+            <button type="submit" class="btn">Sign Up</button>
         </form>
     </div>
 </body>
