--- a/Login.html
+++ b/Login.html
@@ -30,7 +30,7 @@
             <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <p>Don't have an account? <a href="Register.html">Register</a></p>
             </div>
         </form>
     </div>
