--- a/Register.html
+++ b/Register.html
@@ -18,22 +18,22 @@
             <h1>Sign Up</h1>
 
             <div class="input-box">
-                <input type="text" placeholder="Username" required>
+                <input type="text" placeholder="Your username" required>
                 <i class='bx bxs-user'></i>
             </div>
 
             <div class="input-box">
-                <input type="email" placeholder="E-mail" required>
+                <input type="email" placeholder="Your e-mail" required>
                 <i class='bx bx-envelope'></i>
             </div>
 
             <div class="input-box">
-                <input type="tel" placeholder="Telephone" required>
+                <input type="tel" placeholder="Your telephone" required>
                 <i class='bx bxs-phone' ></i>
             </div>
             
             <div class="input-box">
-                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Your password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
@@ -43,6 +43,10 @@
             </div>
 
             <button type="submit" class="btn">Sign Up</button>
+
+            <div class="register-link">
+                <p>Do you already have an account? <a href="Login.html">Login</a></p>
+            </div>
         </form>
     </div>
 </body>
