--- a/Login.html
+++ b/Login.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="widt=device-width, initial-scale=1.0">
-    <title> Login in HTML and CSS | Codehall</title>
-    <link rel="stylesheet" href="style.css">
+    <title> Login</title>
+    <link rel="stylesheet" href="stylelogin.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <head>
 
@@ -30,7 +30,7 @@
             <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Register</a></p>
+                <p>Don't have an account? <a href="Register.html">Register</a></p>
             </div>
         </form>
     </div>
