--- a/Register.html
+++ b/Register.html
@@ -17,6 +17,14 @@
         <form action="">
             <h1>Sign Up</h1>
 
+            <div class="image-container">
+                <label for="profile-image-input" class="image-label">
+                    <img id="profile-image" src="profile.png" alt="Profile Image">
+                </label>
+                <input type="file" id="profile-image-input" style="display: none;" accept="image/*" onchange="displayImage(this)">
+            </div>
+
+
             <div class="input-box">
                 <input type="text" placeholder="Your username" required>
                 <i class='bx bxs-user'></i>
@@ -38,7 +46,7 @@
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="Repeat your password" required>
+                <input type="password" placeholder="Confirm your password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
@@ -47,6 +55,19 @@
             <div class="register-link">
                 <p>Do you already have an account? <a href="Login.html">Login</a></p>
             </div>
+
+            <script>
+                function displayImage(input) {
+                    var file = input.files[0];
+                    if (file) {
+                        var reader = new FileReader();
+                        reader.onload = function (e) {
+                            document.getElementById('profile-image').src = e.target.result;
+                        };
+                        reader.readAsDataURL(file);
+                    }
+                }
+            </script>
         </form>
     </div>
 </body>
