--- a/homepage.html
+++ b/homepage.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="eng">
 
-<head> 
-    <meta charset= "UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EasyWIN - Home</title> 
-
-    <link rel="stylesheet" href="home.css"/>
-    <!-- <link rel="stylesheet" href="login.css"/> -->
-
 </head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE-edge">
+<meta name="viewport" content="widt=device-width, initial-scale=1.0">
+<title> Login</title>
+<link rel="stylesheet" href="home.css">
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+<head>
 <body>
     <nav>
         <div class="menu">
