melhorei e pus a nav em tudo

--- a/Register.html
+++ b/Register.html
@@ -12,6 +12,19 @@
 <head>
 
 <body>
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="homepage.html">EasyWIN</a>
+            </div>
+            <ul>
+                <li><a href="#">Maps</a> </li>
+                <li><a href="#">How it works</a> </li>    
+                <li><a class="backgroundcolor" href="Login.html">Login/ Sign up</a> </li>
+    
+            </ul>
+        </div>
+    </nav>
 
     <div class="wrapper">
         <form action="">
