--- a/Login.html
+++ b/Login.html
@@ -12,7 +12,19 @@
 <head>
 
 <body>
-
+    <nav>
+        <div class="menu">
+            <div class="logo">
+                <a href="homepage.html">EasyWIN</a>
+            </div>
+            <ul>
+                <li><a href="#">Maps</a> </li>
+                <li><a href="#">How it works</a> </li>    
+                <li><a class="backgroundcolor" href="Login.html">Login/ Sign up</a> </li>
+    
+            </ul>
+        </div>
+    </nav>
     <div class="wrapper">
         <form action="">
             <h1>Login</h1>
@@ -30,7 +42,7 @@
             <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
-                <p>Don't have an account? <a href="Register.html">Register</a></p>
+                <p>Don't have an account? <a href="Register.html">Sign up</a></p>
             </div>
         </form>
     </div>
