cenas mais dinamicas

--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
             </div>
             <ul>
                 <li><a href="#">Maps</a> </li>
-                <li><a href="#">How it works</a> </li>    
+                <li><a href="#howitworks">How it works</a> </li>    
                 <li><a class="backgroundcolor" href="Login.html">Login/ Sign up</a> </li>
     
             </ul>
@@ -30,12 +30,23 @@
     <div class="center">
 
         <div class="title">Visiting friends has never been this easy</div>
+        <div>
+            <ul>
+                <li><a class="backgroundcolor"href="#">Announce</a></li>
+                <li><a class="backgroundcolor"href="#">Reserve</a></li>
+
+            </ul>
+        </div>
     </div>
     
-    <div class = "howitworks">
-        <div class="image_reserve">
-            <img src="airbnb alugar.png">
+    <div id = "howitworks">
+        <div class="image_reserve"><img src="airbnb alugar.png"></div>
+        <div class="reservation">
+            <h3>Make reservations</h3>
+            <p>See which friends have available accomodations for you and decide for yourself based on weather, average costs and time of the year </p>
+
         </div>
+
     </div>
     <div class="heighttotal"></div>
 
